--- a/MVC/Views/Shared/_Header.cshtml
+++ b/MVC/Views/Shared/_Header.cshtml
@@ -2,7 +2,7 @@
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
     <div class="container-fluid">
         <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MvcExampleP34</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -12,13 +12,13 @@
         <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
             <ul class="navbar-nav flex-grow-1">
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                 </li>
 
-                @if (User.IsInRole(RoleConstants.Manager))
+                @if (User.IsInRole(RoleConstants.Admin) || User.IsInRole(RoleConstants.Manager))
                 {
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Manage
                         </a>
                         <ul class="dropdown-menu">
@@ -36,7 +36,7 @@
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item me-2">
-                    <a class="nav-link text-dark" asp-controller="Cart" asp-action="Index" id="cart-link">
+                    <a class="nav-link text-light" asp-controller="Cart" asp-action="Index" id="cart-link">
                         <i class="bi bi-cart"></i>
                         <span class="badge rounded-pill bg-danger" id="cart-item-count">0</span>
                     </a>
@@ -44,7 +44,7 @@
                 @if (SignInManager.IsSignedIn(User))
                 {
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Hello @UserManager.GetUserName(User)!
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
@@ -61,10 +61,10 @@
                 else
                 {
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-controller="Account" asp-action="Register">Register</a>
+                        <a class="nav-link text-light" asp-controller="Account" asp-action="Register">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Login</a>
+                        <a class="nav-link text-light" asp-controller="Account" asp-action="Login">Login</a>
                     </li>
                 }
             </ul>
